src/main/metadata/objects/News__c.object
<CustomObject>
    <description>This Object is used to create and post new updates or news on Bulletin.</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_List__c</fullName>
        <inlineHelpText>For multiple approvers, Please use CTRL + Select Approver.</inlineHelpText>
        <label>Approver List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>WorkFlow_Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Director</fullName>
                </value>
                <value>
                    <fullName>After Sales Committee</fullName>
                </value>
                <value>
                    <fullName>After Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>ND Manager</fullName>
                </value>
                <value>
                    <fullName>Approver1</fullName>
                </value>
                <value>
                    <fullName>Approver10</fullName>
                </value>
                <value>
                    <fullName>Approver11</fullName>
                </value>
                <value>
                    <fullName>Approver12</fullName>
                </value>
                <value>
                    <fullName>Approver2</fullName>
                </value>
                <value>
                    <fullName>Approver3</fullName>
                </value>
                <value>
                    <fullName>Approver4</fullName>
                </value>
                <value>
                    <fullName>Approver5</fullName>
                </value>
                <value>
                    <fullName>Approver6</fullName>
                </value>
                <value>
                    <fullName>Approver7</fullName>
                </value>
                <value>
                    <fullName>Approver8</fullName>
                </value>
                <value>
                    <fullName>Approver9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Network Development</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Logistic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Allows users to enter up to 131,072 characters on separate lines.</description>
        <inlineHelpText>Allows users to enter up to 131,072 characters on separate lines.</inlineHelpText>
        <label>Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DocStatus_FileUpload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>variable using for file upload from UI if doc status is ready to publish</description>
        <label>DocStatus_FileUpload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready to Publish</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Files_Info__c</fullName>
        <description>To store text if files available in related list</description>
        <label>Files Info</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>'https://asiadvdcp1-daimlerasia.cs5.force.com/MBIndonesia/s/detail/'+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click Here</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know the status of the news weather sent email notification or not using batchClassForNewsSubscribers apex class.</description>
        <label>Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>content that should be approved, and also decide if the content does not need approval</description>
        <label>Need Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <formula>If(Save_As_Draft__c == TRUE, "Please uncheck Save as Draft field to Publish News",If(ISPICKVAL(Approval_Status__c,"Rejected"), "If necessary resubmit again for approval after discussion with Rejector",null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Steps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; " " &amp; CreatedBy.LastName</formula>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>content authors can type in comments for the reviewer to see.</description>
        <inlineHelpText>Author can enter remarks/comments here.</inlineHelpText>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Save_As_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Content Author can save News as Draft. Which we cannot publish until check box unchecked.</description>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_With_Groups__c</fullName>
        <label>Share With Groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RCP_NewsReader_All</fullName>
                </value>
                <value>
                    <fullName>RCP_NewsReader_Restricted_1</fullName>
                </value>
                <value>
                    <fullName>RCP_NewsReader_Restricted_2</fullName>
                </value>
                <value>
                    <fullName>RCP_NewsReader_Restricted_3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkFlow_Group__c</fullName>
        <label>WFGRP</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Need_Approval__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Network Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All_News_Internal_Users</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category_Type__c</columns>
        <columns>WorkFlow_Group__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Document_Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Save_As_Draft__c</columns>
        <columns>Approver_List__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All News</label>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_News_Partner_Users</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Category_Type__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All News</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_After_Sales_Committee</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>After Sales Committee</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending for After Sales Committee</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_AfterSalesCommittee</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_After_Sales_Manager</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>After Sales Manager</value>
        </filters>
        <label>Pending for After Sales Manager</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_AfterSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_Marketing_Manager</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>Marketing Manager</value>
        </filters>
        <label>Pending for Marketing Manager</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_MarketingManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_ND_Manager</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>ND Manager</value>
        </filters>
        <label>Pending for ND Manager</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_NDManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_Sales_Director</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>Sales Director</value>
        </filters>
        <label>Pending for Sales Director</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_SalesDirector</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_for_Sales_Manager</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_Name__c</columns>
        <columns>Title__c</columns>
        <columns>Approver_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver_List__c</field>
            <operation>includes</operation>
            <value>Sales Manager</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending for Sales Manager</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBDINA_RCP_SalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MBDINA_RCP_Admin_News</fullName>
        <filterScope>Queue</filterScope>
        <label>MBDINA_RCP_Admin</label>
        <queue>MBDINA_RCP_Admin</queue>
        <sharedTo>
            <allInternalUsers/>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Bulletin-{00000}</displayFormat>
        <label>News Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <description>This record type used in News creation</description>
        <label>News</label>
    </recordTypes>
    <recordTypes>
        <fullName>News_After_Approval</fullName>
        <active>true</active>
        <description>This record type is used for after approval.</description>
        <label>News After Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>News_Approval</fullName>
        <active>true</active>
        <description>This record type is used in approval of News</description>
        <label>News Approval</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Approevr_List_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(WorkFlow_Group__c,"")),
ISBLANK(Approver_List__c)
)</errorConditionFormula>
        <errorDisplayField>Approver_List__c</errorDisplayField>
        <errorMessage>Please select atleast one Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_Not_Modify_News_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Approval_Status__c ,'Pending'), 
OR (ISCHANGED(Name),ISCHANGED(Title__c),ISCHANGED(Description__c),ISCHANGED(Approver_List__c),ISCHANGED(Need_Approval__c),ISCHANGED(Category_Type__c),ISCHANGED(Remarks__c),ISCHANGED(Save_As_Draft__c),ISCHANGED(Share_With_Groups__c),ISCHANGED(WorkFlow_Group__c), 
ISPICKVAL(Document_Status__c,'Expired')) 

)</errorConditionFormula>
        <errorMessage>You are not allowed to change the News details in this stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_Not_Modify_News_EndDate</fullName>
        <active>true</active>
        <description>Do_Not_Modify_News_EndDate if it is not required. Only can be changed if it is less than start date</description>
        <errorConditionFormula>AND( 
NOT($Profile.Name="System Administrator"), 
ISPICKVAL(Approval_Status__c ,'Pending'), 
AND(ISCHANGED(Expiration_Date__c),Start_Date__c &gt;= Today() , NOT(ISCHANGED(Start_Date__c))) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to change the News details in this stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDate_should_be_greater_than_StartDate</fullName>
        <active>true</active>
        <description>News End Date should be greater than Start Date.</description>
        <errorConditionFormula>Expiration_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>News End Date should be greater than or equal to Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Should_be_Future_Date</fullName>
        <active>true</active>
        <description>News Start Date Should be Future Date.</description>
        <errorConditionFormula>Start_Date__c  &lt; Today()</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>News Start Date Should be Today or Future Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Workflow_Group_is_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Need_Approval__c == True,
ISPICKVAL(WorkFlow_Group__c,"")
)</errorConditionFormula>
        <errorDisplayField>WorkFlow_Group__c</errorDisplayField>
        <errorMessage>Please select Workflow Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>needforapproval_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Save_As_Draft__c == True,
 Need_Approval__c == True
)</errorConditionFormula>
        <errorDisplayField>Need_Approval__c</errorDisplayField>
        <errorMessage>In order to sent for approval please uncheck "Draft".</errorMessage>
    </validationRules>
</CustomObject>